src/objects/Spende__c.object
<CustomObject>
    <description>Einmalspende</description>
    <fields>
        <fullName>BIC__c</fullName>
        <label>BIC</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beschreibung__c</fullName>
        <label>Beschreibung</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrierungstag__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>wann die Info über die Spende zu uns gekommen ist</inlineHelpText>
        <label>Registrierungstag</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spendenbetrag__c</fullName>
        <label>Spendenbetrag</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spendentyp__c</fullName>
        <label>Spendentyp</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Spendentyp</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spender__c</fullName>
        <label>Spender</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Spenden</relationshipLabel>
        <relationshipName>Spenden</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tag_Geldeingang__c</fullName>
        <label>Tag Geldeingang</label>
        <type>Date</type>
    </fields>
    <label>Spende</label>
    <nameField>
        <displayFormat>Spende-{0000}</displayFormat>
        <label>Spende Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spenden</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>